configure panic handler
